Fix MethodButton text alignment on short strings

--- a/src/components/MethodButton.module.css
+++ b/src/components/MethodButton.module.css
@@ -6,9 +6,12 @@
 
 .button svg {
   height: 4rem;
-  margin-bottom: auto;
 }
 
 .button:disabled svg {
   stroke-width: 1.5px;
+}
+
+.button span {
+  margin: auto;
 }
